<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewmodel"
            type="com.hfad.bmi.MainViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:background="#A5EBAC"
                    android:gravity="center"
                    android:text="@string/tinh_chi_so_bmi"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:labelFor="@id/name"
                        android:text="@string/nhap_ten"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <EditText
                        android:text="@={viewmodel.name}"
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="2"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="20sp"
                        tools:ignore="VisualLintTextFieldSize" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:labelFor="@id/chieu_cao"
                        android:text="@string/chieu_cao"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <EditText
                        android:text="@={viewmodel.chieuCao}"
                        android:id="@+id/chieu_cao"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="2"
                        android:importantForAutofill="no"
                        android:inputType="number|numberDecimal"
                        android:textSize="20sp"
                        tools:ignore="VisualLintTextFieldSize" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:labelFor="@id/can_nang"
                        android:text="@string/can_nang"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <EditText
                        android:text="@={viewmodel.canNang}"
                        android:id="@+id/can_nang"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="2"
                        android:importantForAutofill="no"
                        android:inputType="number|numberDecimal"
                        android:textSize="20sp"
                        tools:ignore="VisualLintTextFieldSize" />
                </TableRow>


            </TableLayout>
            <Button
                android:onClick="@{()->viewmodel.chuanDoan()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:text="@string/tinh_ibm_va_chuan_doan"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            <TextView
                android:id="@+id/chuan_doan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.kqChuanDoan}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>
    </ScrollView>
</layout>


